cmake_minimum_required(VERSION 3.5)
project(QtGuiToturial VERSION 0.1 LANGUAGES CXX)



add_subdirectory(Strings)
add_subdirectory(DateAndTime)
add_subdirectory(LayoutManagement)
add_subdirectory(EventsAndSignals)
add_subdirectory(Widgets)
add_subdirectory(Painting)
add_subdirectory(CustomWidget)
add_subdirectory(Snake)
add_subdirectory(BreakOut)
